--- a/react-donut-shop/src/pages/SignUp/SignUp.module.css
+++ b/react-donut-shop/src/pages/SignUp/SignUp.module.css
@@ -1,4 +1,5 @@
 .parentContainer {
+  background-color: rgba(248, 221, 227, 1);
   display: grid;
   height: 100vh;
   height: 100svh;
@@ -7,9 +8,8 @@
 }
 .backgroundImageContainer {
   background-image: url("../../assets/backgrounds/dounuts-background.jpeg");
-  background-position: -200px -100px;
   background-repeat: no-repeat;
-  object-fit: cover;
+  background-size: cover;
 }
 .contentContainer {
   display: flex;
@@ -19,9 +19,9 @@
 }
 .wave {
   position: absolute;
-  fill: var(--background);
+  fill: rgba(248, 221, 227, 1);
   top: -40%;
-  left: 0;
+  left: -5px;
   height: 160%;
   transform: translate(-95%) rotateX(180deg);
   z-index: 5;
